# libcompact

./: CMakeLists.txt  package.json
include/: compact.h
src/: array.c  bool.c  buffer.c  fixed32.c  fixed64.c  float32.c  float64.c  int.c  int16.c  int32.c  int64.c  int8.c  uint.c  uint16.c  uint32.c  uint64.c  uint8.c  uint8array.c  utf8.c  zig-zag.h
test/: CMakeLists.txt  array-utf8.c  fixed32.c  fixed64.c  int.c  int16.c  int32.c  int64.c  int8.c  uint.c  uint16.c  uint32.c  uint64.c  uint8.c
